--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.4.0",
     "body-parser": "^1.18.3",
     "dialogflow": "^0.8.2",
     "express": "^4.16.4",
