update node js version

--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   },
   "author": "",
   "license": "ISC",
+  "engines":{
+    "node": "8.7.0"
+  },
   "dependencies": {
     "@sendgrid/mail": "^7.4.0",
     "body-parser": "^1.18.3",
